--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
+	}
 }
