--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.418.0",
 		"mode-watcher": "^0.4.1",
+		"pocketbase": "^0.21.4",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
