--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"lucide-svelte": "^0.418.0",
 		"mode-watcher": "^0.4.1",
 		"pocketbase": "^0.21.4",
+		"svelte-markdown": "^0.4.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
