--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mode-watcher": "^0.4.1",
 		"pocketbase": "^0.21.4",
 		"svelte-markdown": "^0.4.1",
+		"svelte-sonner": "^0.3.27",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
