--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"insane": "^2.6.2",
 		"lucide-svelte": "^0.418.0",
 		"mode-watcher": "^0.4.1",
 		"pocketbase": "^0.21.4",
