--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,16 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             "command": "npm run dev",
             "name": "Run development server",
+            "request": "launch",
+            "type": "node-terminal"
+        }, 
+        {
+            "command": "npm run build",
+            "name": "Run build",
             "request": "launch",
             "type": "node-terminal"
         }
