feat: Add emoji support fix: Center images in Markdown

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"insane": "^2.6.2",
 		"lucide-svelte": "^0.418.0",
 		"mode-watcher": "^0.4.1",
+		"node-emoji": "^2.1.3",
 		"pocketbase": "^0.21.4",
 		"svelte-markdown": "^0.4.1",
 		"svelte-sonner": "^0.3.27",
